# android-ndk-cmake-sample

./: .gitignore  Android.bp  CMakeLists.txt  main.cpp  math.cpp  math.h
test/: Android.bp  CMakeLists.txt  test.cpp
